# healthcare-analytics-platform-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirement.txt  requirements.txt
docs/: architecture.md  claims_data_model.md  data_quality_framework.md  pharmacy_data_model.md
scripts/: generate_pharmacy_340b_data.py  generate_sample_data.py
src/healthcare_analytics/: main.py
src/healthcare_analytics/claims/: orchestrator.py
src/healthcare_analytics/claims/analytics/: member_cost_summary.py  monthly_utilization.py  provider_performance.py
src/healthcare_analytics/claims/ingestion/: ingest_claims.py
src/healthcare_analytics/claims/quality/: validation_runner.py
src/healthcare_analytics/claims/staging/: stage_claims.py
src/healthcare_analytics/claims/transformations/: build_dim_date.py  build_dim_member.py  build_dim_provider.py  build_fact_claims.py  clean_claims.py
src/healthcare_analytics/pharmacy_340b/: orchestrator.py
src/healthcare_analytics/pharmacy_340b/analytics/: covered_entity_performance.py  drug_utilization_summary.py  monthly_340b_savings.py  payer_mix_summary.py
src/healthcare_analytics/pharmacy_340b/ingestion/: ingest_pharmacy.py
src/healthcare_analytics/pharmacy_340b/quality/: business_rule_checks.py  validation_runner.py
src/healthcare_analytics/pharmacy_340b/staging/: stage_pharmacy.py
src/healthcare_analytics/pharmacy_340b/transformations/: build_dim_drug.py  (+5 more)
src/healthcare_analytics/shared/: file_io.py  observability.py
tests/: test_claims_pipeline.py  test_pharmacy_pipeline.py  test_quality_checks.py
