[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-analytics-platform-demo"
version = "0.1.0"
description = "Production-style Python healthcare claims and pharmacy 340B analytics pipelines"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
testpaths = ["tests"]
